added about section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,105 @@
       </div>
     </section>
 
+    <!-- about / why section -->
+    <section id="about" class="py-5 text-center bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-primary pb-3">Why This Book?</h1>
+              <p class="lead pb-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex
+                maxime, voluptate in rerum nulla dolor.
+              </p>
+            </div>
+
+            <!-- accordian -->
+            <div id="accordian">
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse1"
+                      data-toggle="collapse"
+                      data-parent="#accordian"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse1" class="collapse show">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. In
+                    neque vel alias tenetur quam accusantium harum eaque,
+                    dolorem, animi vitae nihil ducimus quos, molestiae facere
+                    labore officiis eum? Ab, iure, accusantium dolores porro
+                    ipsum rem totam accusamus, minus sit fugiat perspiciatis
+                    deserunt facilis! Iusto asperiores quos distinctio optio
+                    cupiditate possimus!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse2"
+                      data-toggle="collapse"
+                      data-parent="#accordian"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Gain The
+                      Knowledge
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse2" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. In
+                    neque vel alias tenetur quam accusantium harum eaque,
+                    dolorem, animi vitae nihil ducimus quos, molestiae facere
+                    labore officiis eum? Ab, iure, accusantium dolores porro
+                    ipsum rem totam accusamus, minus sit fugiat perspiciatis
+                    deserunt facilis! Iusto asperiores quos distinctio optio
+                    cupiditate possimus!
+                  </div>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header">
+                  <h5 class="mb-0">
+                    <div
+                      href="#collapse3"
+                      data-toggle="collapse"
+                      data-parent="#accordian"
+                    >
+                      <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                    </div>
+                  </h5>
+                </div>
+
+                <div id="collapse3" class="collapse">
+                  <div class="card-body">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. In
+                    neque vel alias tenetur quam accusantium harum eaque,
+                    dolorem, animi vitae nihil ducimus quos, molestiae facere
+                    labore officiis eum? Ab, iure, accusantium dolores porro
+                    ipsum rem totam accusamus, minus sit fugiat perspiciatis
+                    deserunt facilis! Iusto asperiores quos distinctio optio
+                    cupiditate possimus!
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
