--- a/index.html
+++ b/index.html
@@ -250,6 +250,161 @@
       </div>
     </section>
 
+    <!-- authors -->
+    <section id="authors" class="my-5 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="info-header mb-5">
+              <h1 class="text-primary pb-3">Meet The Authors</h1>
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt quo dolorem repudiandae quis ullam molestias?
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img
+                  src="img/person1.jpg"
+                  alt=""
+                  class="img-fluid rounded-circle w-50 mb-3"
+                />
+                <h3>Susan Williams</h3>
+                <h5 class="text-muted">Lead Writer</h5>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos
+                  enim odit cum nemo distinctio quo!
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img
+                  src="img/person2.jpg"
+                  alt=""
+                  class="img-fluid rounded-circle w-50 mb-3"
+                />
+                <h3>Grace Smith</h3>
+                <h5 class="text-muted">Co Writer</h5>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos
+                  enim odit cum nemo distinctio quo!
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img
+                  src="img/person3.jpg"
+                  alt=""
+                  class="img-fluid rounded-circle w-50 mb-3"
+                />
+                <h3>John Doe</h3>
+                <h5 class="text-muted">Editor</h5>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos
+                  enim odit cum nemo distinctio quo!
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <img
+                  src="img/person4.jpg"
+                  alt=""
+                  class="img-fluid rounded-circle w-50 mb-3"
+                />
+                <h3>Kevin Swanson</h3>
+                <h5 class="text-muted">Designer</h5>
+                <p>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos
+                  enim odit cum nemo distinctio quo!
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://facebook.com">
+                      <i class="fab fa-facebook"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://twitter.com">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </div>
+                  <div class="p-4">
+                    <a href="https://instagram.com">
+                      <i class="fab fa-instagram"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
