--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>BootStrap Theme</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+  <body id="home" data-spy="scroll" data-target="#main-nav">
+    <nav
+      class="navbar navbar-expand-md navbar-light fixed-top py-4"
+      id="main-nav"
+    >
       <div class="container">
         <a href="#home" class="navbar-brand">
           <img src="img/mlogo.png" width="50" height="50" alt="" />
@@ -29,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#showcase" class="nav-link">Home</a>
+              <a href="#home" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="#about" class="nav-link">About</a>
@@ -487,6 +490,29 @@
     <script>
       // get the current year for copyright
       $('#year').text(new Date().getFullYear());
+
+      // init scrollspy
+      $('body').scrollspy({
+        target: '#main-nav',
+      });
+
+      // smooth scroll
+      $('#main-nav a').on('click', function (event) {
+        if (this.hash !== '') {
+          event.preventDefault();
+          const hash = this.hash;
+
+          $('html,body').animate(
+            {
+              scrollTop: $(hash).offset().top,
+            },
+            800,
+            function () {
+              window.location.hash = hash;
+            }
+          );
+        }
+      });
     </script>
   </body>
 </html>
